<resources>
    <string name="app_name">Planificador</string>
    <string name="hint_titulo">Titulo: </string>
    <string name="hint_detalles">Detalles: </string>
    <string name="hint_lugar">Lugar: </string>
    <string name="hint_dia">Fecha: </string>
    <string name="hint_hora">Hora: </string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnHora">Seleccionar Hora</string>
    <string name="btnFecha">Seleccionar Fecha</string>
    <string name="menu_horario">Horario</string>
    <string name="menu_planificador">Planificador</string>
    <string name="menu_crear">Agregar actividad o materia</string>
    <string name="hint_lunes">Actividad del Lunes: </string>
    <string name="hint_martes">Actividad del Martes: </string>
    <string name="hint_miercoles">Actividad del Miercoles: </string>
    <string name="hint_jueves">Actividad del Jueves: </string>
    <string name="hint_viernes">Actividad del Viernes: </string>
    <string name="hint_sabado">Actividad del Sabado: </string>
    <string name="hint_domingo">Actividad del Domingo: </string>
    <string name="hint_lunes1">Lunes: </string>
    <string name="hint_martes1">Martes: </string>
    <string name="hint_miercoles1">Miercoles: </string>
    <string name="hint_jueves1">Jueves: </string>
    <string name="hint_viernes1">Viernes: </string>
    <string name="hint_sabado1">Sabado: </string>
    <string name="hint_domingo1">Domingo: </string>
    <string name="btnCambiar">Editar</string>
    <string name="desarrollado">Desarrollado por: Maurice Lang Bonilla</string>
    <string name="hint_nombre">Nombre: </string>
    <string name="hint_cantidad">Duracion: </string>
    <string name="hint_profesor">Profesor: </string>
    <string name="hint_salon">Salon: </string>
    <string name="hint_formato">00:00</string>
    <string name="btnAddAct">Agregar actividad</string>

    <string-array name="strHora">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>