<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/negro"
    tools:context=".NuevoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_titulo" />

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textAutoComplete"
            android:labelFor="@+id/viewTitulo"
            android:textColor="@color/crema"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_detalles" />

        <EditText
            android:id="@+id/txtDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine|textAutoComplete"
            android:labelFor="@+id/viewDetalles"
            android:textColor="@color/crema"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_lugar" />

        <EditText
            android:id="@+id/txtLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textAutoComplete"
            android:labelFor="@+id/viewLugar"
            android:textColor="@color/crema"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_dia" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155px"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:ems="10"
                android:inputType="date"
                android:labelFor="@+id/viewDia"
                android:textColor="@color/crema"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btnFecha"
                android:padding="10dp"
                android:layout_gravity="right"
                android:layout_margin="50dp"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:text="@string/btnFecha"
                android:textColor="@color/azul_claro"
                android:textSize="10dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/viewHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_hora" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155px"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:ems="10"
                android:inputType="time"
                android:labelFor="@+id/viewHora"
                android:textColor="@color/crema"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btnHora"
                android:padding="10dp"
                android:layout_gravity="right"
                android:layout_margin="50dp"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:text="@string/btnHora"
                android:textColor="@color/azul_claro"
                android:textSize="10dp"/>

        </LinearLayout>


        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnGuardar"
            android:textColor="@color/azul_claro"
            android:textSize="18sp" />





    </LinearLayout>

</LinearLayout>