<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/negro"
    tools:context=".NuevoHActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco1"
                android:background="@color/azul_oscuro"
                android:text="@string/hint_hora" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_formato"
                    android:inputType="textPersonName|textAutoComplete"
                    android:labelFor="@+id/viewHora"
                    android:textColor="@color/crema"
                    android:textColorHint="@color/crema"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/viewLunes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco1"
                android:background="@color/azul_oscuro"
                android:text="@string/hint_lunes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sbrLunes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:entries="@array/strHora"
                    android:labelFor="@+id/viewLunes"
                    android:textColor="@color/crema"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/viewMartes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco1"
                android:background="@color/azul_oscuro"
                android:text="@string/hint_martes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sbrMartes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:entries="@array/strHora"
                    android:labelFor="@+id/viewMartes"
                    android:textColor="@color/crema"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/viewMiercoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco1"
                android:background="@color/azul_oscuro"
                android:text="@string/hint_miercoles" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sbrMiercoles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:entries="@array/strHora"
                    android:labelFor="@+id/viewMiercoles"
                    android:textColor="@color/crema"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/viewJueves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco1"
                android:background="@color/azul_oscuro"
                android:text="@string/hint_jueves" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sbrJueves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:entries="@array/strHora"
                    android:labelFor="@+id/viewJ"
                    android:textColor="@color/crema"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/viewViernes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco1"
                android:background="@color/azul_oscuro"
                android:text="@string/hint_viernes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sbrViernes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:entries="@array/strHora"
                    android:labelFor="@+id/viewViernes"
                    android:textColor="@color/crema"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/viewSabado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco1"
                android:background="@color/azul_oscuro"
                android:text="@string/hint_sabado" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sbrSabado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:entries="@array/strHora"
                    android:labelFor="@+id/viewSabado"
                    android:textColor="@color/crema"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/viewDomingo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco1"
                android:background="@color/azul_oscuro"
                android:text="@string/hint_domingo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sbrDomingo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:entries="@array/strHora"
                    android:labelFor="@+id/viewDomingo"
                    android:textColor="@color/crema"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnGuarda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnGuardar"
                android:textColor="@color/azul_claro"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnAddAct"
                android:textColor="@color/azul_claro"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>