<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/negro"
    tools:context=".VerAActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_nombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textAutoComplete"
            android:labelFor="@+id/viewTitulo"
            android:textColor="@color/crema"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_detalles" />

        <EditText
            android:id="@+id/txtDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine|textAutoComplete"
            android:labelFor="@+id/viewDetalles"
            android:textColor="@color/crema"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_cantidad" />

        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textAutoComplete"
            android:labelFor="@+id/viewLugar"
            android:textColor="@color/crema"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_profesor" />


        <EditText
            android:id="@+id/txtProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:ems="10"
            android:inputType="textPersonName|textAutoComplete"
            android:labelFor="@+id/viewDia"
            android:textColor="@color/crema"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/viewSalon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco1"
            android:background="@color/azul_oscuro"
            android:text="@string/hint_salon" />

        <EditText
            android:id="@+id/txtSalon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:ems="10"
            android:inputType="textPersonName|textAutoComplete"
            android:labelFor="@+id/viewHora"
            android:textColor="@color/crema"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnGuardar"
            android:textColor="@color/azul_claro"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_edit" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_delete" />

    </LinearLayout>



</LinearLayout>