<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/negro"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/crema"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="1dp">

                        <TextView
                            android:id="@+id/txtLunes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/crema"
                            android:layout_gravity="top"
                            android:text="@string/hint_lunes1"
                            android:textSize="13dp"/>

                        <TextView
                            android:id="@+id/viewLunes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textColor="@color/blanco"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="1dp">

                        <TextView
                            android:id="@+id/txtMartes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/crema"
                            android:layout_gravity="top"
                            android:text="@string/hint_martes1"
                            android:textSize="13dp"/>

                        <TextView
                            android:id="@+id/viewMartes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textSize="12dp"
                            android:textColor="@color/blanco"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="1dp">

                        <TextView
                            android:id="@+id/txtMiercoles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/crema"
                            android:layout_gravity="top"
                            android:text="@string/hint_miercoles1"
                            android:textSize="13dp"/>

                        <TextView
                            android:id="@+id/viewMiercoles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textSize="12dp"
                            android:textColor="@color/blanco"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="1dp">

                        <TextView
                            android:id="@+id/txtJueves"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/crema"
                            android:layout_gravity="top"
                            android:text="@string/hint_jueves1"
                            android:textSize="13dp"/>

                        <TextView
                            android:id="@+id/viewJueves"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textSize="12dp"
                            android:textColor="@color/blanco"/>
                    </LinearLayout>

                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:layout_margin="1dp">

                       <TextView
                           android:id="@+id/txtViernes"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textColor="@color/crema"
                           android:layout_gravity="top"
                           android:text="@string/hint_viernes1"
                           android:textSize="13dp"/>

                       <TextView
                           android:id="@+id/viewViernes"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="bottom"
                           android:textSize="12dp"
                           android:textColor="@color/blanco"/>
                   </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="1dp">

                        <TextView
                            android:id="@+id/txtSabado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/crema"
                            android:layout_gravity="top"
                            android:text="@string/hint_sabado1"
                            android:textSize="13dp"/>

                        <TextView
                            android:id="@+id/viewSabado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textSize="12dp"
                            android:textColor="@color/blanco"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="1dp">

                        <TextView
                            android:id="@+id/txtDomingo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/crema"
                            android:layout_gravity="top"
                            android:text="@string/hint_domingo1"
                            android:textSize="13dp"/>

                        <TextView
                            android:id="@+id/viewDomingo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:textSize="12dp"
                            android:textColor="@color/blanco"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/azul_acero" />


    </LinearLayout>
</RelativeLayout>